# sonnx

./: Cargo.toml  README.md
src/: error.rs  fingerprint.rs  lib.rs  model.rs  shared.rs  split.rs  tensor.rs
tests/: real_models.rs  split.rs
